# TDP005_Cpp_Game_Project

./: .gitignore  MC-tiles.tiled-session  README.md  VideoTetris.cpp
Documents/: Designspecifikation.tex  Kravspecifikation.bbl  Kravspecifikation.bcf  Kravspecifikation.run.xml  Kravspecifikation.tex  Kravspecifikation.xdv  Statusrapport3.txt  rm_latex.sh
Documents/auto/: Designspecifikation.el  Kravspecifikation.el
Game/: CMakeCache.txt  CMakeLists.txt  Game  Game.cbp  Makefile  TDP005_game  animated_object.cpp  animated_object.h  attack_behavior.cpp  attack_behavior.h  behavior.cpp  behavior.h  cmake_install.cmake  common.h  constants.h  enemy.cpp  enemy.h  flying_enemy.cpp  flying_enemy.h  game  game.cbp  game_object.cpp  game_object.h  game_state.cpp  game_state.h  jumping_enemy.cpp  jumping_enemy.h  lava.cpp  lava.h  level.cpp  level.h  level_loader.cpp  level_loader.h  main.cpp  menu_state.cpp  menu_state.h  menu_type.h  movement_behavior.cpp  movement_behavior.h  moving_object.cpp  (+11 more)
Tilesets/: map_tiles.tmx  valid_tileset.tmx  valid_tileset_wo_anim_Plattforms.csv
gruppkontrakt/: gruppkontrakt.tex  kontrakt.tex  rm_latex.sh
gruppkontrakt/auto/: gruppkontrakt.el  kontrakt.el
prototype/: CMakeLists.txt  attack_behavior.cpp  attack_behavior.h  behavior.cpp  behavior.h  component.cpp  component.h  enemy.cpp  enemy.h  game.cpp  game_object.cpp  game_object.h  game_over_state.cpp  game_over_state.h  game_state.cpp  game_state.h  ingame.cpp  ingame.h  level.cpp  level.h  level_loader.cpp  level_loader.h  main.cpp  main_menu_state.cpp  main_menu_state.h  menu_state.cpp  menu_state.h  menu_type.h  movement_behavior.cpp  movement_behavior.h  moving_object.cpp  moving_object.h  pause_menu_state.cpp  pause_menu_state.h  player.cpp  player.h  projectile.cpp  projectile.h  state.cpp  state.h  (+2 more)
prototype/Levels/: level1.csv  level1.lvl  level1_bg.csv  level1_fg.csv
prototype/old/: game.cpp  game.h  game_object.cpp  game_state.h  ingame.cpp  ingame.h  level.cpp  level.h  player.cpp  player.h  projectile.cpp  projectile.h  terrain.cpp
tetris_test/: VideoTetris.h  main.cc  sfml
